--- a/index.html
+++ b/index.html
@@ -1,217 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div id="iv8w7x" class="gpd-navbar">
-  <div id="isoawo" class="gpd-container">
-    <div id="iuigow" class="gdp-row">
-      <div id="ior6l1" class="cell">
-        <a id="i2kuu9" class="gpd-link-box"><div id="ia3tuc">Your Logo
-          </div></a>
-      </div>
-      <div id="izl1wj" class="cell gpd-navbar__menu">
-        <a id="iltz4g" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M3 6h18v2H3V6m0 5h18v2H3v-2m0 5h18v2H3v-2z">
-          </path>
-          </svg></a>
-      </div>
-      <div id="iyhdh6" class="cell gpd-navbar__items">
-        <div id="i7s9kr" class="gdp-row gpd-navbar__items-grid">
-          <div id="ig0l2s" class="cell gpd-navbar__item">
-            <a id="io2w38" href="#ihz1pd" class="gpd-navbar__item-link navbar-link">About</a>
-          </div>
-          <div id="ickot1" class="cell gpd-navbar__item">
-            <a id="ie396l" href="#iizsg" class="gpd-navbar__item-link navbar-link">Clients</a>
-          </div>
-          <div class="cell gpd-navbar__item">
-            <a id="iytp4g" href="#i673md" class="gpd-navbar__item-link navbar-link">Contact</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<section id="iu45">
-  <div id="ie4h" class="container">
-    <h1 id="if54" data-anim-type="fadeInUp" class="gpd-header">We're the right team
-      <br>
-    </h1>
-    <h1 id="id2rn" data-anim-type="fadeInUp" class="gpd-header">Born to bring success
-    </h1>
-    <a href="#ihz1pd" id="il1ph" data-anim-type="fadeInUp" class="gpd-button3">GET STARTED</a>
-  </div>
-</section>
-<section id="ihz1pd">
-  <div id="idn8f3" class="container">
-    <h1 id="i8l9wm" class="gpd-header">Lorem ipsum dolor sit amet
-    </h1>
-    <div id="i92b1k">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.
-    </div>
-    <a href="##" id="ivu86" class="button3">
-      Learn more</a>
-  </div>
-</section>
-<section id="im9ai" class="feature3-section">
-  <div id="iizsg" class="container">
-    <div class="gdp-row">
-      <div id="igefjl" class="cell">
-        <div id="i7ov9" class="feature3">
-          <h2 id="i0swg" class="gpd-header">PELLENTESQUE ADIPIS​​​​​​​
-            <br>
-          </h2>
-          <div id="i71ky3" class="gpd-image-block">
-          </div>
-          <div class="feature3-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. &nbsp;Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.
-          </div>
-        </div>
-      </div>
-      <div class="cell">
-        <div id="iyc93" class="feature3">
-          <h2 id="iw706" class="gpd-header">MORBI INTERDUM MOL
-          </h2>
-          <div id="i3un1c" class="gpd-image-block">
-          </div>
-          <div class="feature3-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. &nbsp;Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="io079" class="feature4-section">
-  <div id="is11l" class="container">
-    <div id="iua72f" class="gdp-row">
-      <div class="cell">
-        <div id="ib3gr" class="feature4">
-          <div id="id3nm" class="row">
-            <div id="ikrsf" class="cell">
-              <a id="imf3g" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M21 14H3V4h18m0-2H3c-1.11 0-2 .89-2 2v12c0 1.1.9 2 2 2h7l-2 3v1h8v-1l-2-3h7c1.1 0 2-.9 2-2V4a2 2 0 0 0-2-2z">
-                </path>
-                </svg></a>
-            </div>
-          </div>
-          <h3 id="inf9ul" class="gpd-header">Cumsan mollis eros
-          </h3>
-          <div class="feature4-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa
-          </div>
-          <a href="##" id="i5u8j" class="button3">
-            Learn more</a>
-        </div>
-      </div>
-      <div class="cell">
-        <div id="i6eyv" class="feature4">
-          <div id="i300ef" class="row">
-            <div id="i97j6j" class="cell">
-              <a id="itb3x9" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M19.25 19H4.75V3h14.5M14 22h-4v-1h4m4-21H6C4.34 0 3 1.34 3 3v18c0 1.66 1.34 3 3 3h12c1.66 0 3-1.34 3-3V3c0-1.66-1.34-3-3-3z">
-                </path>
-                </svg></a>
-            </div>
-          </div>
-          <h3 id="i025hk" class="gpd-header">Pellentesque a diam sit
-          </h3>
-          <div id="inkih" class="feature4-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa
-          </div>
-          <a href="##" class="button3">
-            Learn more</a>
-        </div>
-      </div>
-      <div class="cell">
-        <div id="ist3k" class="feature4">
-          <div id="ieby9k" class="row">
-            <div id="iqgms7" class="cell">
-              <a id="i21ozl" class="gpd-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M17.25 18H6.75V4h10.5M14 21h-4v-1h4m2-19H8C6.34 1 5 2.34 5 4v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V4c0-1.66-1.34-3-3-3z">
-                </path>
-                </svg></a>
-            </div>
-          </div>
-          <h3 id="i8afnn" class="gpd-header">Nullam AVIS quis massa
-          </h3>
-          <div id="iefjj" class="feature4-desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa
-          </div>
-          <a href="##" class="button3">
-            Learn more</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="i673md" class="gpd-section">
-  <div id="ipenhe" class="gpd-container">
-    <h1 id="irim9s" class="gpd-header">GET IN TOUCH
-    </h1>
-    <form method="post" id="imszw1" data-redirect="">
-      <div id="iv3rqj" class="row">
-        <div id="ibwjrp" class="cell">
-          <div id="ijb682">
-            <label id="irq5hx" class="label">Label</label>
-            <input type="text" placeholder="" name="firstname" required id="i0crp" class="input"/>
-          </div>
-        </div>
-        <div id="i8y4ol" class="cell">
-          <div id="isx15v">
-            <label class="label">Label</label>
-            <input type="email" placeholder="" name="email" id="ig2l77" required class="input"/>
-          </div>
-        </div>
-      </div>
-      <div id="iwj7s" class="row">
-        <div id="iky7tt" class="cell">
-          <div id="i677gu">
-            <label class="label">Label</label>
-            <textarea name="message" id="ixmjtg" class="input"></textarea>
-          </div>
-          <button type="submit" id="ic8zk1" class="btn-white-brd">Send</button>
-        </div>
-      </div>
-      <div class="form-group">
-      </div>
-      <div data-form-state="success" id="ih9sq" class="state-success">Thanks! We received your request
-      </div>
-      <div data-form-state="error" id="ifh1k" class="state-error">An error occurred on processing your request, try again!
-      </div>
-    </form>
-    <div id="i0m3m">Lorem ipsum dolor sit amet, consectetuer adipiscing elit
-    </div>
-  </div>
-</section>
-<style>html {
-  scroll-behavior: smooth;
-  }
-</style>
-<script>var items = document.querySelectorAll('#iltz4g');
-  for (var i = 0, len = items.length; i < len; i++) {
-    (function(){
-      var t,e=0,n='gjs-collapse',r='max-height',o='ease-in-out',i=.25,a=function(){
-        var t,e=document.createElement('void'),n={
-          transition:'transitionend',OTransition:'oTransitionEnd',MozTransition:'transitionend',WebkitTransition:'webkitTransitionEnd'};
-        for(t in n)if(void 0!==e.style[t])return n[t]}
-      (),s=function(t){
-        e=1;
-        var n=function(t){
-          var e=window.getComputedStyle(t),n=e.display,o=parseInt(e[r]);
-          if('none'!==n&&'0'!==o)return t.offsetHeight;
-          t.style.height='auto',t.style.display='block',t.style.position='absolute',t.style.visibility='hidden';
-          var i=t.offsetHeight;
-          return t.style.height='',t.style.display='',t.style.position='',t.style.visibility='',i}
-        (t),a=t.style;
-        a.display='block',a.transition=r+' '+i+'s '+o,a.overflowY='hidden',''==a[r]&&(a[r]=0),0==parseInt(a[r])?(a[r]='0',setTimeout(function(){
-          a[r]=n+'px'}
-                                                                                                                                     ,10)):a[r]='0'};
-      n in this||this.addEventListener('click',function(n){
-        if(n.preventDefault(),!e){
-          var o=this.closest('.gpd-navbar').querySelector(".gpd-navbar__items");
-          s(o),t||(o.addEventListener(a,function(){
-            e=0;
-            var t=o.style;
-            0==parseInt(t[r])&&(t.display='',t[r]='')}
-                                     ),t=1)}
-      }
-                                      ),this[n]=1
-    }
-     .bind(items[i]))();
-  }
-</script>
+  <h1>Hello, world!</h1>
+  <h2>Future site of OPPC.ca</h2>
 </body>
 </html>
