--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                     
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white text-primary" href="contact.html" target="_blank">About us</a>
+                        <a class="text-white text-primary" href="index.html">Home</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7"><a href="aboutus.html" class="text-primary">Contact Us</a></li></ul>
             </div>
             <div class="row social-row">
