--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>
                     Since 2022</strong></h4>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Ocean Park PC has been building computers, seeking to bring low-cost building services to the community, where previously you would have to depend on a big-name pc builder like Ibuypower or Canadacomputers, who often wont give you what you need.<br><br>At OPPC, we're here to provide reliable PC building services, tailored to your needs, without overcharging.</p>
+                    Ocean Park PC has been building computers, seeking to bring low-cost building services to the community, where previously you would have to depend on a big-name pc builder like Ibuypower or Canadacomputers, who often won't give you what you need.<br><br>At OPPC, we're here to provide reliable PC building services, tailored to your needs, without overcharging.</p>
             </div>
         </div>
     </div>
