--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="contact.html#top">What are you waiting for? Let's get started today.</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="contact.html">What are you waiting for? Let's get started today.</a></div>
             </div>
         </div>
     </div>
