--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mbr-white mb-3 display-5"><strong>Get in touch with us.</strong></h4>
+                        <h5 class="card-title mbr-fonts-style mbr-white mb-3 display-7">Please note, OPPC Only covers the computer. Peripherals like a monitor, mouse and keyboard are left up to the customer.</h5>
                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuMTzD9TAvySwRHpST4qsqcckGlxJo-lNRPZ_vKQ-U81DIDw/viewform?embedded=true" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                         
                     </div>
