--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                     <p class="mbr-text mbr-fonts-style mb-4 display-7">Eamon Paul was born and raised in Crescent Beach, BC and is a self-described entrepreneur who built this company after discovering a hidden talent for building computers.</p>
                     <p class="name mbr-fonts-style mb-1 display-4">
                         <strong>Eamon Paul</strong></p>
-                    <p class="position mbr-fonts-style display-4">Founder and CEO</p>
+                    <p class="position mbr-fonts-style display-4">Founder and Chief PC Builder</p>
                 </div>
             </div>
         </div>
