--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section data-bs-version="5.1" class="footer3 cid-tdHUnIEiu5" once="footers" id="footer3-b">
+<section data-bs-version="5.1" class="footer3 cid-tdHUnIEiu5" once="footers" id="footer3-6">
 
     
 
