--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <div class="card col-md-12 col-lg-10">
                 <div class="card-wrapper">
                     <div class="card-box align-left">
-                        <h4 class="card-title mbr-fonts-style mbr-white mb-3 display-5"><strong>Get in touch with us.</strong></h4>
+                        <h4 class="card-title mbr-fonts-style mbr-white mb-3 display-5"><strong>Get in touch with us.</strong><br>You can also contact us at contact@oppc.ca anytime.</h4>
                      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuMTzD9TAvySwRHpST4qsqcckGlxJo-lNRPZ_vKQ-U81DIDw/viewform?embedded=true" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                         
                     </div>
