--- a/Our-Team.html
+++ b/Our-Team.html
@@ -78,7 +78,7 @@
                 <div class="u-container-layout u-valign-top-xs u-container-layout-2">
                   <h2 class="u-text u-text-default u-text-1">Eamon Paul</h2>
                   <p class="u-text u-text-2">Owner, CEO, Chief Techie</p>
-                  <p class="u-text u-text-3" spellcheck="true"> Eamon Paul was born and raised in Crescent Beach, BC and is a self-described entrepreneur who built this company after discovering a hidden talent for building computers.</p>
+                  <p class="u-text u-text-3" spellcheck="true"> Eamon Paul was born and raised in Crescent Beach, BC and is a self-described entrepreneur who started this company after discovering a hidden talent for building computers.</p>
                 </div>
               </div>
             </div>
